# turboshell

./: .gitignore  CMakeLists.txt  Makefile
libpathm/: CMakeLists.txt  Makefile
libpathm/include/: file_util.hpp  path.hpp
libpathm/src/: file_util.cpp  fs_entry.cpp  path.cpp
src/: Shell.cpp  Shell.hpp
tsh/: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  Makefile
tsh/src/: Shell.cpp  Shell.hpp  main.cpp
tshlist/: CMakeLists.txt  list
tshlist/src/: main.cpp
tshutils/: .gitignore  CMakeLists.txt  Makefile
tshutils/src/: edit.cpp  fin.cpp  lc.cpp  list.cpp  new.cpp  newdir.cpp  rmall.cpp  size.cpp
